--- a/webpack-loader3/index.html
+++ b/webpack-loader3/index.html
@@ -6,7 +6,11 @@
 </head>
 <body>
 	<p>这是我们的网页内容</p>
-	<div id='root'></div>
+	<div id='root'>
+
+	<span class='iconfont icon-icontiaozhuanchaxun'></span>
+
+	</div>
 	<script src='./dist/main.js'></script>
 </body>
 </html>
